tweaks (public) fix overflowing images and missing centering, some text tweaks

--- a/public/styles/sass/_footer.scss
+++ b/public/styles/sass/_footer.scss
@@ -4,6 +4,10 @@ footer{
     color: $lightbg;
     padding: 4rem 0 8rem 0;
 
+    .text-center {
+      text-align: center;
+    }
+
     p{
         margin-bottom: 4rem;
     }
