--- a/public/styles/sass/_section.scss
+++ b/public/styles/sass/_section.scss
@@ -21,6 +21,7 @@ section{
 
         img{
             margin-bottom: 1rem;
+            max-width: 100%;
         }
 
         .gray-card{
